crates/shep-cli/src/lookout/snapshots/shep__lookout__frames__tests__narrow.snap
---
source: crates/shep-cli/src/lookout/frames.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep       6 in the flock
host  load  ██░░░░░░░░ 2.31 4.10 3.88 / 10 cores  …
───────────────────────────────────────────────────
  ID    NAME      STATUS           CPU     UPTIME  
   ██ FLOCK                                        
  2     api       online           7.1%    1h 28m  
  3     billing…  online           0.8%    1h 29m  
  4     cron      online           0.1%    1h 31m  
  5     metrics   online           0.4%    1h 32m  
  0     web       online           3.4%    1h 25m  
  1     web       online           2.9%    1h 26m  
                                                   
                                                   
q quit   j/k select   / filter   F… control enabled
